# sit-copilot

./: .dockerignore  .env.azure.generated.example  .gitignore  AZURE_SETUP_GUIDE.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  sit_copilot.db
.claude/: settings.json
.claude/checkpoints/: 2026-02-20-193350.analyze-prompt.md  2026-02-20-193350.md  2026-02-20-214931.analyze-prompt.md  2026-02-20-214931.md  2026-02-20-221652.analyze-prompt.md  2026-02-20-221652.md  2026-02-20-225248.analyze-prompt.md  2026-02-20-225248.md  2026-02-20-232145.analyze-prompt.md  2026-02-20-232145.md  2026-02-21-000809.analyze-prompt.md  2026-02-21-000809.md  2026-02-21-172344.analyze-prompt.md  2026-02-21-172344.md
.claude/docs/: DESIGN.md  (+6 more)
.codex/: AGENTS.md  config.toml
app/: __init__.py  main.py
docs/: DEMO_RUNBOOK.md  DEMO_SCENARIO_WEB_ONLY_6-7MIN.md  SPEC.md  azure-provisioning-tech-blog.md  demo_qa_set.md  frontend.md  performance-evaluation.md  poster-3min-script.md  poster-qa-10.md  poster-requirements.md  transformer.md  transformer_qa.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
poster-gen/: CHANGELOG_poster.md  package-lock.json  package.json  poster-preview-export.html  poster-preview-qa-added.html  poster-preview-qa-inset.html  poster-preview.html  tsconfig.json  vite.config.ts
scripts/: dev-server.sh  repair_summary_windows.py  run_lecture_qa_eval.py  run_lecture_qa_latency_report.py  run_live_caption_synthetic_replay.py
tests/: conftest.py
(+437 files in other folders)
